# chess-gpt

./: .gitignore  README.md  main.py  pyproject.toml
chessgpt/dataloaders/: __init__.py  dataloader.py
chessgpt/datasets/: __init__.py  dataset.py
chessgpt/eval/: __init__.py  legality.py
chessgpt/model/: __init__.py  chessgpt.py  positional_encoding.py  transformer.py
chessgpt/tokenizers/: __init__.py  constants.py  tokenizer.py
chessgpt/training/: train.py
nanolm/: constants.py
nanolm/dataloaders/: dataloader.py
nanolm/datasets/: dataloader.py  dataset.py
nanolm/tokenizers/: __init__.py  constants.py  tokenizer.py
