[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-lm"
version = "0.1.0"
description = "Implementation of a nano LLM from scratch, using basic PyTorch building blocks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.4",
    "torch>=2.9.0",
]

[tool.setuptools.packages.find]
include = ["nanolm*"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.1",
]
