[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-gpt"
version = "0.1.0"
description = "Implementation of a chess GPT from scratch, using basic PyTorch building blocks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.4",
    "python-chess>=1.999",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
]

[tool.setuptools.packages.find]
include = ["chessgpt*"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.1",
]
